--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,70 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# ActiveMQ
+**/activemq-data/
+
+# IDEA
+.idea
+.shelf
+*.iws
+*.iml
+*.ipr
+*.ids
+**/out/
+classes/
+bin/
+rebel.xml
+
+# Eclipse
+.project
+.settings
+.classpath
+.metadata
+.recommenders
+.pydevproject
+RemoteSystemsTempFiles/
+
+# NetBeans
+.nb-gradle
+.nb-gradle-properties
+nbproject
+nbactions.xml
+
+# Mac junk
+.DS_Store
+
+# JS
+node_modules/
+dll/
+dist/
+.tmp/
+.sass-cache/
+bower_components/
+
+# Gradle
+.gradle/
+build/
+reports/
+
+# Maven
+target/
+
+# Other temp files
+*.log*
+.pid.lock
+
+# bkp files
+*.bak
+*.orig
+
+# Avoid ignoring Gradle wrapper
+!gradle/wrapper/*
+
+**/bin/
+**/src/main/generated
+**/src/main/gen
+
+#workspaces files
+.synctracker
